generate new files
